Настроена адаптация хэдера

--- a/src/index.html
+++ b/src/index.html
@@ -256,14 +256,16 @@
             <div class="row align-items-center align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="row justify-content-start align-items-center">
-                        <div class="col-md-5 col-lg-5">
-                            <div class="logo_img">
-                                <img src="images/header/logo_main.png" alt="">
+                        <div class="col-sm-6 col-md-6 col-lg-5">
+                            <div class="wrapper_img">
+                                <div class="logo_img">
+                                    <img src="images/header/logo_main.png" alt="">
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-7 col-lg-7 ">
+                        <div class="col-sm-6 col-md-6 col-lg-7 ">
                             <div class="logo_title">
-                                ProDogs.Info
+                                <span>ProDogs.Info</span>
                             </div>
                             <div class="logo_slogan">
                                 Всё о мире собак
@@ -272,11 +274,12 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <div class="banner_header">
-                        Банер 468x60
+                    <div class="baner_wraper">
+                        <div class="banner_header">
+                            Банер 468x60
+                        </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div><!--end /.wrapper_logo-->
