Создана структура для ссылки Смотреть все новости в модуле новостей

--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
                         </li>
                         <li class="item-003 collapsed" data-toggle="collapse" data-target="#collapse3"
                             aria-expanded="false" aria-controls="collapse3">
-                                <span>О собаках</span>
-                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                            <span>О собаках</span>
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
                             <ul id="collapse3" class="collapse dropdown" aria-labelledby="heading3"
                                 data-parent="#accordionMenu">
                                 <li><a href="">Породы собак</a></li>
@@ -305,11 +305,12 @@
                                     <div class="year">2018</div>
                                 </div>
                                 <div class="title_new">
-                                        <a href="">
-                                            <h3>
-                                            Как правильно воспитать вашего питомца? Как правильно воспитать вашего питомца?
-                                            </h3>
-                                        </a>
+                                    <a href="">
+                                        <h3>
+                                            Как правильно воспитать вашего питомца? Как правильно воспитать вашего
+                                            питомца?
+                                        </h3>
+                                    </a>
                                 </div>
                             </div>
                             <div class="intro_new">
@@ -379,7 +380,8 @@
                                         </div>
                                         <h3>
                                             <a href="">
-                                                Генпрокурор рассказал, как будет выполняться поручение Лукашенко «ужесточить борьбу с коррупцией
+                                                Генпрокурор рассказал, как будет выполняться поручение Лукашенко
+                                                «ужесточить борьбу с коррупцией
                                             </a>
                                         </h3>
 
@@ -400,6 +402,16 @@
                             </div>
                         </div>
 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="wrap_link_allnews">
+                            <a href="">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                <span>Смотреть все новости</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
