--- a/src/index.html
+++ b/src/index.html
@@ -408,7 +408,7 @@
                     <div class="col-12">
                         <div class="wrap_link_allnews">
                             <a href="">
-                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                <i class="fa fa-eye fa-lg" aria-hidden="true"></i>
                                 <span>Смотреть все новости</span>
                             </a>
                         </div>
