Выполнена предварительная адаптация блока новостей

--- a/src/index.html
+++ b/src/index.html
@@ -328,41 +328,43 @@
                     </div>
                     <div class="col-sm-12 col-lg-6">
                         <div class="row">
-                            <div class="col-sm-6 col-lg-6">
-                                <div class="wrap_new">
-                                    <a href="">
-                                        <img src="images/content/mod_news/new_2.jpg" alt="">
-                                    </a>
-                                    <div class="data">24 мая 2018</div>
-                                    <div class="title_new">
-                                        <h3>
-                                            <a href="">
-                                                Отправляясь в поход с вашим питомцем учтите эти особенности...
-                                            </a>
+                            <div class="wrap_block_news">
+                                <div class="col-sm-6 col-lg-6">
+                                    <div class="wrap_new">
+                                        <a href="">
+                                            <img src="images/content/mod_news/new_2.jpg" alt="">
+                                        </a>
+                                        <div class="data">24 мая 2018</div>
+                                        <div class="title_new">
+                                            <h3>
+                                                <a href="">
+                                                    Выявлена самая верная порода собак.
+                                                </a>
 
-                                        </h3>
+                                            </h3>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-6 col-lg-6">
-                                <div class="wrap_new">
-                                    <a href="">
-                                        <img src="images/content/mod_news/new_3.jpg" alt="">
-                                    </a>
-                                    <div class="data">26 мая 2018</div>
-                                    <div class="title_new">
-                                        <h3>
-                                            <a href="">
-                                                Отправляясь в поход с вашим питомцем учтите эти особенности...
-                                            </a>
-                                        </h3>
+                                <div class="col-sm-6 col-lg-6">
+                                    <div class="wrap_new">
+                                        <a href="">
+                                            <img src="images/content/mod_news/new_3.jpg" alt="">
+                                        </a>
+                                        <div class="data">26 мая 2018</div>
+                                        <div class="title_new">
+                                            <h3>
+                                                <a href="">
+                                                    Отправляясь в поход с вашим питомцем учтите эти особенности...Отправляясь в поход с вашим питомцем учтите эти особенности
+                                                </a>
+                                            </h3>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <div class="block_news">
+                                <div class="link_news">
                                     <div class="new">
                                         <div class="datatime">
                                             14:21
