Добавлена структура и файл стилей для модуля верхних банеров

--- a/src/index.html
+++ b/src/index.html
@@ -417,7 +417,9 @@
                     </div>
                 </div>
             </div>
+            <div id="mod_slider_top" class="mod_slider">
 
+            </div><!-- end/#mod_slider_top-->
         </div><!--end /.wrapper_content-->
     </div>
 </section>
