Созданы первоначальные настройки слайдера банеров

--- a/src/index.html
+++ b/src/index.html
@@ -354,7 +354,9 @@
                                         <div class="title_new">
                                             <h3>
                                                 <a href="">
-                                                    Отправляясь в поход с вашим питомцем учтите эти особенности...Отправляясь в поход с вашим питомцем учтите эти особенности
+                                                    Отправляясь в поход с вашим питомцем учтите эти
+                                                    особенности...Отправляясь в поход с вашим питомцем учтите эти
+                                                    особенности
                                                 </a>
                                             </h3>
                                         </div>
@@ -418,8 +420,21 @@
                 </div>
             </div>
             <div id="mod_slider_top" class="mod_slider">
+                <div class="owl-carousel owl-theme">
+                    <div class="item"><a href=""><img src="images/content/mod_news/main_new.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_2.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_3.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_4.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_1.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_3.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_2.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="images/content/mod_slider/baner_4.jpg" alt=""></a></div>
+                </div>
 
             </div><!-- end/#mod_slider_top-->
+            <div id="mod_puppies" class="mod_puppies">
+                Модуль Щенки
+            </div>
         </div><!--end /.wrapper_content-->
     </div>
 </section>
