--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="libs/bootstrap-4.1.3-dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="libs/owl-carousel2-2.2.1/css/owl.carousel.min.css"/>
-    <link rel="stylesheet" href="libs/owl-carousel2-2.2.1/css/owl.theme.default.min.css"/>
+    <link rel="stylesheet" href="libs/owl-сarousel2-2.3.4/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="libs/owl-сarousel2-2.3.4/css/owl.theme.default.min.css"/>
     <link rel="stylesheet" href="css/fonts.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 </head>
@@ -452,7 +452,7 @@
 
 <script src="libs/jquery/jquery-3.3.1.min.js"></script>
 <script src="libs/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-<script src="libs/owl-carousel2-2.2.1/js/owl.carousel.min.js"></script>
+<script src="libs/owl-сarousel2-2.3.4/js/owl.carousel.min.js"></script>
 <script src="libs/scrollto/jquery.scrollTo.min.js"></script>
 <script src="js/common.js"></script>
 
