--- a/src/index.html
+++ b/src/index.html
@@ -430,7 +430,12 @@
                     <div class="item"><a href=""><img src="images/content/mod_slider/baner_2.jpg" alt=""></a></div>
                     <div class="item"><a href=""><img src="images/content/mod_slider/baner_4.jpg" alt=""></a></div>
                 </div>
-
+                <div class="owl-nav">
+                    <a class="owl-prev"><i class="fa fa-chevron-left fa-3x" aria-hidden="true"></i>
+                    </a>
+                    <a class="owl-next"><i class="fa fa-chevron-right fa-3x" aria-hidden="true"></i>
+                    </a>
+                </div><!-- end /.owl-nav -->
             </div><!-- end/#mod_slider_top-->
             <div id="mod_puppies" class="mod_puppies">
                 Модуль Щенки
