Создана структура модуля объявлений продажи щенков. Добавлен файл стилей для модуля.

--- a/src/index.html
+++ b/src/index.html
@@ -438,7 +438,14 @@
                 </div><!-- end /.owl-nav -->
             </div><!-- end/#mod_slider_top-->
             <div id="mod_puppies" class="mod_puppies">
-                Модуль Щенки
+                <div class="mod_title">
+                    <h2>Объявления о продаже щенков</h2>
+                    <div class="link_help">
+                        <a href=""><span>Как сюда попасть?</span></a>
+                    </div>
+                </div>
+
+
             </div>
         </div><!--end /.wrapper_content-->
     </div>
