--- a/src/index.html
+++ b/src/index.html
@@ -444,6 +444,55 @@
                         <a href=""><span>Как сюда попасть?</span></a>
                     </div>
                 </div>
+                <div class="filters">
+                    <div class="arrows d-none d-sm-none d-lg-flex">
+                        <i class="fa fa-angle-right fa-lg" aria-hidden="true"></i>
+                        <i class="fa fa-angle-right fa-2x" aria-hidden="true"></i>
+                        <i class="fa fa-angle-right fa-3x" aria-hidden="true"></i>
+                    </div>
+                    <form action="">
+                            <div class="form-row">
+                                <div class="form-group col-md-2 col-sm-6">
+                                    <select id="breed" class="form-control">
+                                        <option selected>Порода</option>
+                                        <option>Австралийская овчарка</option>
+                                        <option>Сибирский хаски</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-2 col-sm-6">
+                                    <select id="sex" class="form-control">
+                                        <option selected>Пол</option>
+                                        <option>Мужской</option>
+                                        <option>Женский</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-group col-md-2 col-sm-6">
+                                    <select id="birthday" class="form-control">
+                                        <option selected>Дата рождения</option>
+                                        <option>Календарь</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-2 col-sm-6">
+                                    <select id="map" class="form-control">
+                                        <option selected>Местоположение</option>
+                                        <option>Карта</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-2 col-sm-6">
+                                    <select id="price" class="form-control">
+                                        <option selected>Цена</option>
+                                        <option>500 руб.</option>
+                                    </select>
+                                </div>
+
+                                <button type="submit">
+                                    <i class="fa fa-filter" aria-hidden="true"></i>
+                                    <span>Выбрать</span>
+                                </button>
+                            </div>
+                    </form>
+                </div>
 
 
             </div>
