--- a/src/index.html
+++ b/src/index.html
@@ -466,7 +466,6 @@
                                         <option>Женский</option>
                                     </select>
                                 </div>
-
                                 <div class="form-group col-md-2 col-sm-6">
                                     <select id="birthday" class="form-control">
                                         <option selected>Дата рождения</option>
@@ -485,13 +484,67 @@
                                         <option>500 руб.</option>
                                     </select>
                                 </div>
-
                                 <button type="submit">
                                     <i class="fa fa-filter" aria-hidden="true"></i>
                                     <span>Выбрать</span>
                                 </button>
                             </div>
                     </form>
+                </div>
+                <div class="block_cards">
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="card">
+                                <div class="meta_info">
+                                    <div class="top">
+                                        <i class="fa fa-star fa-lg" aria-hidden="true"></i>
+                                        <span>Top</span></div>
+                                    <div class="price">$250</div>
+                                </div>
+                                <div class="content_card">
+                                    <img src="images/content/mod_puppies/img_card001.jpg" alt="">
+                                    <div class="breed">Сибирский хаски</div>
+                                    <div class="fields">
+                                        <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
+                                        <span>Мальчик</span></div>
+                                        <div class="birthday">
+                                            <i class="fa fa-calendar" aria-hidden="true"></i>
+                                            <span>19 ноября 2018</span>
+                                        </div>
+                                        <div class="adress">
+                                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                            <span>Беларусь, г.Минск, ул. Руссиянова 12</span>
+                                        </div>
+                                    </div>
+                                    <div class="hide_block">
+                                        <div class="text">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut cumque
+                                                delectus dolores, error, excepturi explicabo in iste labore magnam
+                                                necessitatibus pariatur quod recusandae saepe sapiente similique sunt.
+                                                Aliquid, porro!
+                                            </p>
+                                            <p>Atque earum error illum laboriosam quia voluptate! Accusantium
+                                                consectetur consequuntur delectus dicta dolorem earum eligendi iste
+                                                magni maiores molestiae molestias odio, quas, quasi quibusdam quidem
+                                                recusandae rem sit suscipit ullam.
+                                            </p>
+                                        </div>
+                                        <div class="link_more">
+                                            <a href="">
+                                                <span>Подробнее</span>
+                                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+
+                                            </a>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">Объявление2</div>
+                        <div class="col-3">Объявление3</div>
+                        <div class="col-3">Объявление4</div>
+                    </div>
                 </div>
 
 
