Добавлена структура ссылок в модуле продажи щенков для смотреть все объявления и добавить объявление

--- a/src/index.html
+++ b/src/index.html
@@ -493,7 +493,7 @@
                 </div>
                 <div class="block_cards">
                     <div class="row">
-                        <div class="col-12  col-sm-6 col-lg-3">
+                        <div class="col-12 col-sm-6 col-lg-3">
                             <div class="wrap_card">
                                 <div class="meta_info">
                                     <div class="top">
@@ -503,9 +503,7 @@
                                 </div>
                                 <div class="flip_card">
                                     <div class="front_card">
-                                        <a href="">
-                                            <img src="images/content/mod_puppies/img_card001.jpg" alt="">
-                                        </a>
+                                        <img src="images/content/mod_puppies/img_card005.jpg" alt="">
                                         <div class="breed">Сибирский хаски</div>
                                         <div class="fields">
                                             <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
@@ -549,15 +547,14 @@
                                     <div class="top">
                                         <i class="fa fa-star fa-lg" aria-hidden="true"></i>
                                         <span>Top</span></div>
-                                    <div class="price">$250</div>
+                                    <div class="price">$2250</div>
                                 </div>
                                 <div class="flip_card">
                                     <div class="front_card">
-                                        <a href="">
-                                            <img src="images/content/mod_puppies/img_card002.jpg" alt="">
-                                        </a>
+                                        <img src="images/content/mod_puppies/img_card006.jpg" alt="">
                                         <div class="breed">Австралийский шелковистый
-                                            терьер</div>
+                                            терьер
+                                        </div>
                                         <div class="fields">
                                             <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
                                                 <span>Мальчик</span></div>
@@ -600,13 +597,11 @@
                                     <div class="top">
                                         <i class="fa fa-star fa-lg" aria-hidden="true"></i>
                                         <span>Top</span></div>
-                                    <div class="price">$250</div>
+                                    <div class="price">$34250</div>
                                 </div>
                                 <div class="flip_card">
                                     <div class="front_card">
-                                        <a href="">
-                                            <img src="images/content/mod_puppies/img_card003.jpg" alt="">
-                                        </a>
+                                        <img src="images/content/mod_puppies/img_card003.jpg" alt="">
                                         <div class="breed">Американский бульдог</div>
                                         <div class="fields">
                                             <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
@@ -654,9 +649,7 @@
                                 </div>
                                 <div class="flip_card">
                                     <div class="front_card">
-                                        <a href="">
-                                            <img src="images/content/mod_puppies/img_card004.jpg" alt="">
-                                        </a>
+                                        <img src="images/content/mod_puppies/img_card004.jpg" alt="">
                                         <div class="breed">Английский коккер-спаниель</div>
                                         <div class="fields">
                                             <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
@@ -694,6 +687,25 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="all_post">
+                                <a href="">
+                                    <i class="fa fa-eye" aria-hidden="true"></i>
+                                    <span>Смотреть все объявления</span>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="add_post">
+                                <a href="">
+                                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                                    <span>Добавить объявление</span>
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
