Предварительно настроен и адаптирован модуль продажи щенков

--- a/src/index.html
+++ b/src/index.html
@@ -369,7 +369,7 @@
                                 <div class="link_news">
                                     <div class="new">
                                         <div class="datatime">
-                                            14:21
+                                            24.09.2018
                                         </div>
                                         <h3>
                                             <a href="">
@@ -380,7 +380,7 @@
                                     </div>
                                     <div class="new">
                                         <div class="datatime">
-                                            14:21
+                                            08.07.2018
                                         </div>
                                         <h3>
                                             <a href="">
@@ -392,7 +392,7 @@
                                     </div>
                                     <div class="new">
                                         <div class="datatime">
-                                            14:21
+                                            05.04.2018
                                         </div>
                                         <h3>
                                             <a href="">
@@ -439,58 +439,12 @@
             </div><!-- end/#mod_slider_top-->
             <div id="mod_puppies" class="mod_puppies">
                 <div class="mod_title">
-                    <h2>Объявления о продаже щенков</h2>
+                    <h2>Продаются щенки</h2>
                     <div class="link_help">
                         <a href=""><span>Как сюда попасть?</span></a>
                     </div>
                 </div>
-                <div class="filters">
-                    <div class="arrows d-none d-sm-none d-lg-flex">
-                        <i class="fa fa-angle-right fa-lg" aria-hidden="true"></i>
-                        <i class="fa fa-angle-right fa-2x" aria-hidden="true"></i>
-                        <i class="fa fa-angle-right fa-3x" aria-hidden="true"></i>
-                    </div>
-                    <form action="">
-                        <div class="form-row">
-                            <div class="form-group col-md-2 col-sm-6">
-                                <select id="breed" class="form-control">
-                                    <option selected>Порода</option>
-                                    <option>Австралийская овчарка</option>
-                                    <option>Сибирский хаски</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2 col-sm-6">
-                                <select id="sex" class="form-control">
-                                    <option selected>Пол</option>
-                                    <option>Мужской</option>
-                                    <option>Женский</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2 col-sm-6">
-                                <select id="birthday" class="form-control">
-                                    <option selected>Дата рождения</option>
-                                    <option>Календарь</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2 col-sm-6">
-                                <select id="map" class="form-control">
-                                    <option selected>Местоположение</option>
-                                    <option>Карта</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2 col-sm-6">
-                                <select id="price" class="form-control">
-                                    <option selected>Цена</option>
-                                    <option>500 руб.</option>
-                                </select>
-                            </div>
-                            <button type="submit">
-                                <i class="fa fa-filter" aria-hidden="true"></i>
-                                <span>Выбрать</span>
-                            </button>
-                        </div>
-                    </form>
-                </div>
+
                 <div class="block_cards">
                     <div class="row">
                         <div class="col-12 col-sm-6 col-lg-3">
@@ -514,7 +468,7 @@
                                             </div>
                                             <div class="adress">
                                                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                                <span>Беларусь,г.Минск,ул.Руссиянова 12</span>
+                                                <span>Беларусь, г.Минск, ул.Руссиянова 12</span>
                                             </div>
                                         </div>
                                     </div><!-- end/.front_card-->
@@ -564,7 +518,7 @@
                                             </div>
                                             <div class="adress">
                                                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                                <span>Беларусь,г.Минск,ул.Руссиянова 12</span>
+                                                <span>Украина, г.Киев, ул.Грушевского 129</span>
                                             </div>
                                         </div>
                                     </div><!-- end/.front_card-->
@@ -612,7 +566,7 @@
                                             </div>
                                             <div class="adress">
                                                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                                <span>Беларусь,г.Минск,ул.Руссиянова 12</span>
+                                                <span>Россия, г.Воронеж, ул.Октябрьская 124А</span>
                                             </div>
                                         </div>
                                     </div><!-- end/.front_card-->
@@ -660,7 +614,7 @@
                                             </div>
                                             <div class="adress">
                                                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                                <span>Беларусь,г.Минск,ул.Руссиянова 12</span>
+                                                <span>Казахстан, г.Астана, ул.Кизибека Нургалиева 12</span>
                                             </div>
                                         </div>
                                     </div><!-- end/.front_card-->
@@ -688,25 +642,66 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="all_post">
-                                <a href="">
-                                    <i class="fa fa-eye" aria-hidden="true"></i>
-                                    <span>Смотреть все объявления</span>
-                                </a>
+                </div>
+                <div class="filters">
+                    <form action="">
+                        <div class="form-row">
+                            <div class="form-group col-lg-2 col-md-6">
+                                <select id="breed" class="form-control">
+                                    <option selected>Порода</option>
+                                    <option>Австралийская овчарка</option>
+                                    <option>Сибирский хаски</option>
+                                </select>
                             </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="add_post">
-                                <a href="">
-                                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                                    <span>Добавить объявление</span>
-                                </a>
+                            <div class="form-group col-lg-2 col-md-6">
+                                <select id="sex" class="form-control">
+                                    <option selected>Пол</option>
+                                    <option>Мужской</option>
+                                    <option>Женский</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-lg-2 col-md-6">
+                                <select id="birthday" class="form-control">
+                                    <option selected>Дата рождения</option>
+                                    <option>Календарь</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-lg-2 col-md-6">
+                                <select id="map" class="form-control">
+                                    <option selected>Местоположение</option>
+                                    <option>Карта</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-lg-2 col-md-6">
+                                <select id="price" class="form-control">
+                                    <option selected>Цена</option>
+                                    <option>500 руб.</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-lg-2 col-md-6">
+                                <button type="submit">
+                                    <i class="fa fa-filter" aria-hidden="true"></i>
+                                    <span>Выбрать</span>
+                                </button>
                             </div>
                         </div>
 
+                    </form>
+                </div>
+                <div class="mod_links">
+                    <div class="add_post">
+                        <a href="">
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                            <span>Добавить объявление</span>
+                        </a>
                     </div>
+                    <div class="all_post">
+                        <a href="">
+                            <i class="fa fa-eye" aria-hidden="true"></i>
+                            <span>Смотреть все объявления</span>
+                        </a>
+                    </div>
+
                 </div>
 
 
