Добавлена структура ссылок на добавить объявление и смотреть все объявления в модуле розыск собаки.

--- a/src/index.html
+++ b/src/index.html
@@ -882,6 +882,21 @@
                             </div>
                         </div>
                     </div>
+                    <div class="mod_links">
+                        <div class="add_post">
+                            <a href="">
+                                <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                                <span>Добавить объявление</span>
+                            </a>
+                        </div>
+                        <div class="all_post">
+                            <a href="">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                <span>Смотреть все объявления</span>
+                            </a>
+                        </div>
+
+                    </div>
                 </div>
             </div><!--end /#mod_search_dog-->
         </div><!--end /.wrapper_content-->
