Изменен вид фильтра в модуле объявлений о продаже щенков

--- a/src/index.html
+++ b/src/index.html
@@ -647,36 +647,52 @@
                     <form action="">
                         <div class="form-row">
                             <div class="form-group col-lg-2 col-md-6">
-                                <select id="breed" class="form-control">
-                                    <option selected>Порода</option>
-                                    <option>Австралийская овчарка</option>
-                                    <option>Сибирский хаски</option>
-                                </select>
+                                <div class="select">
+                                    <select id="breed" class="form-control">
+                                        <option selected>Порода</option>
+                                        <option>Австралийская овчарка</option>
+                                        <option>Сибирский хаски</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
                             </div>
                             <div class="form-group col-lg-2 col-md-6">
-                                <select id="sex" class="form-control">
-                                    <option selected>Пол</option>
-                                    <option>Мужской</option>
-                                    <option>Женский</option>
-                                </select>
+                                <div class="select">
+                                    <select id="sex" class="form-control">
+                                        <option selected>Пол</option>
+                                        <option>Мужской</option>
+                                        <option>Женский</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
                             </div>
                             <div class="form-group col-lg-2 col-md-6">
-                                <select id="birthday" class="form-control">
-                                    <option selected>Дата рождения</option>
-                                    <option>Календарь</option>
-                                </select>
+                                <div class="select">
+                                    <select id="birthday" class="form-control">
+                                        <option selected>Дата рождения</option>
+                                        <option>Календарь</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
                             </div>
                             <div class="form-group col-lg-2 col-md-6">
-                                <select id="map" class="form-control">
-                                    <option selected>Местоположение</option>
-                                    <option>Карта</option>
-                                </select>
+                                <div class="select">
+                                    <select id="map" class="form-control">
+                                        <option selected>Местоположение</option>
+                                        <option>Карта</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
                             </div>
                             <div class="form-group col-lg-2 col-md-6">
-                                <select id="price" class="form-control">
-                                    <option selected>Цена</option>
-                                    <option>500 руб.</option>
-                                </select>
+                                <div class="select">
+                                    <select id="price" class="form-control">
+                                        <option selected>Цена</option>
+                                        <option>500 руб.</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
+
                             </div>
                             <div class="form-group col-lg-2 col-md-6">
                                 <button type="submit">
@@ -781,7 +797,7 @@
                                                 Окрас
                                                 серо-чёрный.
                                                 Средних размеров, чем –то похожа на овчарку, пугливая.
-                                            Позже ее видели на
+                                                Позже ее видели на
                                                 пересечении улиц Ботанической и Козлова. Огромная просьба всем видившим
                                                 или
                                                 нашедшим ее связаться с нами по телефонам. Вознаграждение гарантируется!
@@ -799,8 +815,8 @@
                                                     <span>+375 29 608 89 64</span>
                                                 </div>
                                                 <!--<div class="phone">-->
-                                                    <!--<i class="fa fa-phone-square" aria-hidden="true"></i>-->
-                                                    <!--<span>+375 017 208 45 64</span>-->
+                                                <!--<i class="fa fa-phone-square" aria-hidden="true"></i>-->
+                                                <!--<span>+375 017 208 45 64</span>-->
                                                 <!--</div>-->
                                             </div>
                                             <div class="skype">
@@ -838,19 +854,24 @@
                                     <img src="images/content/mod_search_dog/img_post004.jpg" alt="">
                                     <div class="message">
                                         <div class="text">
-                                            <p>Пропала собака. Порода Золотистый ретривер. Отзывается на кличку Лея. Окрас серо-чёрный.Средних размеров, чем –то похожа на овчарку, пугливая. </p>
-                                            <p>Позже ее видели на пересечении улиц Ботанической и Козлова. Огромная просьба всем видившим или нашедшим ее связаться с нами по телефонам. Вознаграждение гарантируется! Помогите пожалуйста!!! Надежда и Ирина.</p>
+                                            <p>Пропала собака. Порода Золотистый ретривер. Отзывается на кличку Лея.
+                                                Окрас серо-чёрный.Средних размеров, чем –то похожа на овчарку,
+                                                пугливая. </p>
+                                            <p>Позже ее видели на пересечении улиц Ботанической и Козлова. Огромная
+                                                просьба всем видившим или нашедшим ее связаться с нами по телефонам.
+                                                Вознаграждение гарантируется! Помогите пожалуйста!!! Надежда и
+                                                Ирина.</p>
                                         </div>
                                         <div class="contacts">
                                             <!--<div class="phones">-->
-                                                <!--<div class="mobile">-->
-                                                    <!--<i class="fa fa-mobile" aria-hidden="true"></i>-->
-                                                    <!--<span>+375 29 608 89 64</span>-->
-                                                <!--</div>-->
-                                                <!--<div class="phone">-->
-                                                    <!--<i class="fa fa-phone-square" aria-hidden="true"></i>-->
-                                                    <!--<span>+375 017 208 45 64</span>-->
-                                                <!--</div>-->
+                                            <!--<div class="mobile">-->
+                                            <!--<i class="fa fa-mobile" aria-hidden="true"></i>-->
+                                            <!--<span>+375 29 608 89 64</span>-->
+                                            <!--</div>-->
+                                            <!--<div class="phone">-->
+                                            <!--<i class="fa fa-phone-square" aria-hidden="true"></i>-->
+                                            <!--<span>+375 017 208 45 64</span>-->
+                                            <!--</div>-->
                                             <!--</div>-->
                                             <div class="skype">
                                                 <i class="fa fa-skype" aria-hidden="true"></i>
